--- a/style.css
+++ b/style.css
@@ -132,10 +132,6 @@ header {
     box-shadow: 0 2px 10px gray;
 }
 
-.conteiner {
-    position: relative;
-}
-
 #logo-link {
     display: block;
     height: 100%;
@@ -611,7 +607,7 @@ header {
     letter-spacing: 3px;
 }
 
-#students-section div {
+#students-container {
     padding: 2%;
     display: flex;
     height: max-content;
@@ -627,14 +623,19 @@ header {
     background-size: contain;
     background-position: center;
     width: 23%;
-    padding: 10%;
+    height: 100%;
+    padding: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     transition: 0.6s;
 }
 
 .student-card-photo {
-    display: block;
     width: 100%;
-    background-image: url(res/student.png);
+    height: 100%;
+    background-image: url(res/square_example.jpg);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -765,6 +766,7 @@ header {
     border-radius: 15px;
     color: #410E6A;
     font-family: sans-serif;
+    z-index: 2;
 }
 
 .faq-item {
